--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,3 @@
- metadata to pvo before show, mark "coming soon"
-  this will allow presenters to review.
-
 client checklist:
   release on talk submission
   data driven schedule, api (json)
@@ -9,11 +6,6 @@ client checklist:
   title slide for videos
   room access times
   internet access
-
-dvswitch:
-  everything: default host/port
-  dvsource-dvgrab - save unmixed stream
-  dvsink-file - default file name: yyyy-mm-ddd/hh_mm_ss.i.dv
 
 Show twinpact feed on slave display.
   note: slave display is also used to play a sponsor slide roll between talks.
@@ -25,6 +17,8 @@ veyepar:
       put top 4 sows on the client page, 
       link to stats.
   
+  episode.html save.. UI to show user it got saved.
+
   views.mk_cuts - look at previous episode, 
     if it ran late, assume current ran late too.
 
@@ -55,13 +49,17 @@ veyepar:
      use testing server for testing
      https://developers.google.com/youtube/2.0/developers_guide_protocol_testing
      delete old version when replaced by new encode.
+     don't re-upload the same video (causes duplicate video error)
      invalid tags cause fail and loop forever - fix this. (fixed by not setting tags)
      
-  don't email presenter untill youtube is done processing.
+  don't email presenter until youtube is done processing.
     review_1.py is a good place to do this.
   
   state - need something to handle Canceled talks, breaks, etc.  
     disposition?  
+  state - mk_titles, email_titles ?
+     (currently are done outside of the formal workflow steps, so hard to fix one and re-do)   
+  state - really needs something new. like a bunch of "completed" flags.
 
   flag - do not overwrite when syncing with conf db - this is to handle when I know better than the conference data.
 
@@ -80,10 +78,6 @@ veyepar:
      I think it is a buffering problem - 
      the code needs to poll the db, not look at the local cashed value
 
-  add 2 formal steps:
-     make title
-     email title
-     (currently are done outside of the formal workflow steps, so hard to fix one and re-do)   
 
 encoding:
   soften jump cuts
@@ -95,6 +89,7 @@ encoding:
 slugify talk titles- 
   trunkcate on word boundry when over X chars.
   de-unicode
+  add -NNN to deal with colisions, like "keynote-1"
 
 model:
   child table of output files
@@ -103,7 +98,7 @@ model:
 
   change duration from "hh:mm:ss" to float(sec)
   
-  BuckID / Richard Category
+  BucketID / Richard Category
     Sometimes this is per client, sometimes per show.
     thought: one field in each, if Show blank, look to client.
 
@@ -125,9 +120,6 @@ live cd: mainly for slave
   ~/dvswitchrc
   10.0.0.2
   avahi to find dvswitch
-
-title screen preview
-  email to presenters before the show
 
 dvswitch process management:
   Ryan V 
@@ -152,5 +144,6 @@ OCR - http://software-carpentry.org
 
 encoding 
     flag for odd audio (like missing or very low)
-        DD - There is a new audiolevel filter. See output of melt -query filter=audiolevel
+    DD - "There is a new audiolevel filter. See output of melt -query filter=audiolevel"
+
 
