--- a/TODO.txt
+++ b/TODO.txt
@@ -50,7 +50,7 @@ veyepar:
      https://developers.google.com/youtube/2.0/developers_guide_protocol_testing
      delete old version when replaced by new encode.
      don't re-upload the same video (causes duplicate video error)
-     invalid tags cause fail and loop forever - fix this. (fixed by not setting tags)
+     # invalid tags cause fail and loop forever - fix this. (fixed by not setting tags)
      
   don't email presenter until youtube is done processing.
     review_1.py is a good place to do this.
@@ -73,6 +73,9 @@ veyepar:
       
       save raw json per episode 
       
+   move show.schedule_url to client.
+    
+   implement South data migration foo
 
    Stop - make it work again - 
      I think it is a buffering problem - 
